Interaction blocks pass